--- a/index.html
+++ b/index.html
@@ -27,14 +27,18 @@
                     max-width: 1000px;
                     margin: 20px auto;
                 }
-                #description {
+                .description {
                     color: floralwhite;
+                }
+                .mrghead {
+                    margin: 5px;
                 }
             </style>
         </head>
 
         <body>
-            <h1>[ Spider Eye Crab Creature ]</h1>
+            <h1 id="mrghead">[ Spider Eye Crab Creature ]</h1>
+            <h1 id="mrghead">[ The Lava Caves ]</h1>
             
             <p><strong>This mean crab is lookin at you!<br>You should get outta here!</strong></p>
             <p id="description">This lava cave crab has been hardened by the natural lava springs that exist here. Its eyes are weak in the dark, but the glow of abundant molten rock make that a nonissue.</p>
