--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             
             <p><strong>This mean crab is lookin at you!<br>You should get outta here!</strong></p>
             <p class="description">This lava cave crab has been hardened by the natural lava springs that exist here. Its eyes are weak in the dark, but the glow of abundant molten rock makes it a nonissue.</p>
-            <p class="description">Their tiny, yet agile spider legs can propell it forward at breakneck speeds, and can quickly catch up to anything it deems a threat. Even worse, all three of its large eyes are attached to spindle like appendages, so it'll never lose track of you.</p>
+            <p class="description">Their tiny, yet agile spider legs can propell it forward at breakneck speeds, and can quickly catch up to anything it deems a threat. Even worse, all three of its large eyes are attached to spindle-like appendages, so it'll never lose track of you.</p>
             <p class="description">Don't get too close!</p>
             
             <script src="sketch.js"></script>
